# licks

./: .gitignore  Cargo.toml  README.md  package-lock.json
client-backend/: Cargo.toml
client-backend/src/: client.rs  lib.rs  message_types.rs
client-backend/src/account/: mod.rs  register.rs
client-backend/src/database/: contacts.rs  groups.rs  messages.rs  mod.rs  profile.rs  schemas.rs
client-backend/src/manager/: account.rs  connections.rs  groups.rs  key_package.rs  listener.rs  mod.rs  notifications.rs  servers.rs
client-backend/src/messages/: mod.rs  receive.rs
client-backend/src/mls/: credentials.rs  group.rs  mod.rs  welcome.rs
client-backend/src/mls_new/: client.rs
client-backend/src/net/: connection.rs  manager.rs  mod.rs  raw_connection.rs  websocket.rs
client-backend/src/tests/: connections.rs  groups.rs  mod.rs  utils.rs
client-backend/src/ui/: mod.rs
client-dioxus/: Cargo.toml  Dioxus.toml  README.md
client-dioxus/assets/: main.css
client-dioxus/src/: main.rs  panels.rs
client-dioxus/src/components/: icon.rs  mod.rs  modal.rs  tabs.rs
client-dioxus/src/panels/: chat.rs  groups.rs  settings.rs
design/: main.html  styles.css
docs/security/: blinded-address.pv
lib/: Cargo.toml  build.rs
lib/protos/: application_message.proto  blinded_address.proto  credentials.proto  identifiers.proto  message_wire.proto  registration.proto  signed_payload.proto
lib/src/: api.rs  constants.rs  error.rs  lib.rs
lib/src/api/: connection.rs  group.rs  handshake.rs  key_package.rs  messages.rs  proto.rs  registration.rs  server.rs
lib/src/api/connection/: proto.rs
lib/src/crypto/: blinded_address.rs  challenge.rs  listener.rs  mod.rs  noise.rs  rng.rs  usernames.rs
lib/src/crypto/certificates/: ed25519.rs  mod.rs  proto.rs
lib/src/identifiers/: account.rs  device.rs  group.rs  mod.rs
lib/src/mls/: LICENSE-MIT.old  README.md  mod.rs
lib/src/mls/crypto/: cipher_suite.rs  config.rs  credential.rs  crypto_test.rs  key_pair.rs  mod.rs
lib/src/mls/crypto/provider/: key_store.rs  mod.rs  provider_test.rs  rust.rs
lib/src/mls/crypto/provider/rust/: hash.rs  hpke.rs  signature.rs
lib/src/mls/extensibility/: list.rs  mod.rs
lib/src/mls/framing/: commit.rs  framing_test.rs  group_info.rs  mod.rs  private_message.rs  proposal.rs  public_message.rs  welcome.rs
lib/src/mls/group/: config.rs  creation.rs  evolution.rs  group_test.rs  mod.rs  transcript.rs
lib/src/mls/key_package/: builder.rs  mod.rs
lib/src/mls/key_schedule/: key_schedule_test.rs  mod.rs
lib/src/mls/ratchet_tree/: leaf_node.rs  mod.rs  parent_node.rs  ratchet_tree_test.rs
lib/src/mls/secret_tree/: mod.rs  secret_tree_test.rs
lib/src/mls/utilities/: error.rs
lib/src/mls/utilities/serde/: mod.rs  serde_test.rs
lib/src/mls/utilities/tree_math/: mod.rs  tree_math_test.rs
lib/src/util/: base64.rs  mod.rs  time.rs  uuid.rs
server/: Cargo.toml
server/src/: accounts.rs  authenticator.rs  connection.rs  connection_handler.rs  db.rs  error.rs  main.rs  websocket.rs
server/src/services/: chat.rs  key_packages.rs  mod.rs  register.rs  usernames.rs
