[workspace]
resolver = "2"
members = [
    "lib",
    "client-backend",
    "client-dioxus",
    "server"
]
default-members = [
    "lib",
    "client-backend",
    "server"
]

[workspace.lints.clippy]
undocumented_unsafe_blocks = "forbid"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
redundant_else = "allow"
missing_panics_doc = "allow"
missing_assert_message = "warn"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
