[package]
name = "client-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lib = { path = "../lib" }

# Multithread runtime
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }

# Connections: Websocket and QUIC
tokio-tungstenite = "0.19.0"
dirs = "5.0.1"
tokio-util = "0.7.11"
futures-util = { version = "0.3.30", features = ["futures-channel"] }

url = { version = "2.5.2", features = ["serde"] }  
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.22"
thiserror = "1"
scc = "2.1.16"
async-trait = "0.1.82"
mls-rs = { version = "0.41.3", features = ["sqlcipher-bundled"]}
mls-rs-crypto-rustcrypto = { version = "0.11.0", default-features = false, features = ["std"] }
mls-rs-provider-sqlite = { version = "0.13.0", features = ["sqlcipher-bundled"]}
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher", "uuid"] }
futures-channel = "0.3.30"

[features]
default=["client-manager", "integration-testing"]
client-manager=[]
# Activates tests that require licks-server to be launched on localhost. Otherwise, they will just fail.
integration-testing=[]

[lints]
workspace = true
