[package]
name = "client-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lib = { path = "../lib" }

# Multithread runtime
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }

# Connections: Websocket and QUIC
tokio-tungstenite = "0.19.0"
dirs = "5.0.1"
tokio-util = "0.7.12"
futures-util = { version = "0.3.31", features = ["futures-channel"] }

url = { version = "2.5.3", features = ["serde"] }  
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
log = "0.4.22"
thiserror = "1"
scc = "2.2.4"
async-trait = "0.1.83"
mls-rs = { version = "0.41.4", features = ["sqlcipher-bundled"]}
mls-rs-crypto-rustcrypto = { version = "0.11.1", default-features = false, features = ["std"] }
mls-rs-provider-sqlite = { version = "0.13.3", features = ["sqlcipher-bundled"]}
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher", "uuid"] }
futures-channel = "0.3.31"

[features]
default=["client-manager", "integration-testing"]
client-manager=[]
# Activates tests that require licks-server to be launched on localhost. Otherwise, they will just fail.
integration-testing=[]

[lints]
workspace = true
