[package]
name = "client-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lib = { path = "../lib" }

# Multithread runtime
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }

# Connections: Websocket and QUIC
tokio-tungstenite = "0.26.1"
dirs = "6.0.0"
tokio-util = "0.7.13"
futures-util = { version = "0.3.31", features = ["futures-channel"] }

url = { version = "2.5.4", features = ["serde"] }  
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
log = "0.4.25"
thiserror = "2"
scc = "2.3.0"
async-trait = "0.1.85"
mls-rs = { version = "0.41.4", features = ["sqlcipher-bundled"]}
mls-rs-crypto-rustcrypto = { version = "0.11.1", default-features = false, features = ["std"] }
mls-rs-provider-sqlite = { version = "0.13.3", features = ["sqlcipher-bundled"]}
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher", "uuid"] }
futures-channel = "0.3.31"
jenga = { git = "https://github.com/hackerbirds/jenga.git", version = "0.1.0", features = ["timeout", "retry", "restart"] }

[features]
default=["client-manager", "integration-testing"]
client-manager=[]
# Activates tests that require licks-server to be launched on localhost. Otherwise, they will just fail.
integration-testing=[]

[lints]
workspace = true
