[package]
name = "client-dioxus"
version = "0.1.0"
authors = ["hackerbirds <120066692+hackerbirds@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client-backend = { path = "../client-backend" }

dioxus = { version = "0.7.0-alpha.1", features = ["desktop"] }
dioxus-sdk = { version = "0.7.0-alpha.1" }
dioxus-clipboard = "0.2.0"

# Debug
dioxus-logger = "0.7.0-alpha.1"
futures-util = "0.3.31"
env_logger = "0.11.6"
