[package]
name = "lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
# mls-rs traits used to bridge the client-server API.
mls-rs-core = { version = "0.19.1", default-features = false, features = ["serde", "fast_serialize"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
prost = "0.12"
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
thiserror = "1"

# Crypto
rand_core = { version = "0.6.4", features = ["getrandom"] }
hpke = { version = "0.12.0", default-features = false, features = ["alloc", "x25519"] }
snow = { version = "0.9.6", default-features = false, features = ["default-resolver", "aes-gcm", "sha2"]}

hmac = { version = "0.12.1" }
signature = { version = "2.1.0" }
aead = { version = "0.5.2", features = ["rand_core"] }
aes-gcm = { version = "0.10.2" }
sha2 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
hkdf = "0.12.4"
base64ct = { version = "1.6.0", features = ["alloc"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
serde_json = "1"
hex-literal = "0.4.1"
hex = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
