[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lib = { path = "../lib" }
sled = { version = "0.34.7", features = ["no_logs"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
thiserror = "1"
axum = { version = "0.7.7", default-features = false, features = ["http1", "ws"] }
futures-util = "0.3.31"
scc = "2.2"
bincode = "1.3.3"
# Bloom filters are used to prevent duplicate key packages
bloomfilter = { version = "1", features = ["serde"]}

# More efficient allocator for the server
jemallocator = { version = "0.1", optional = true }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["jemalloc"]
jemalloc = ["dep:jemallocator"]

[lints]
workspace = true
